styles/Experience.css
.backg {
  @apply mb-4;
}
.line {
  @apply relative mx-4 border-l-[2px] border-indigo-400 dark:border-indigo-500;
}
.explist {
  @apply mb-8 ml-4 last:mb-4 font-inter
}
.topdiv {
  @apply absolute -left-[9px] h-4 w-4 rounded-full bg-gradient-to-r from-blue-400 via-indigo-400 to-purple-400 ;
}
.time {
  @apply prose mb-1 text-sm font-normal uppercase leading-none dark:prose-invert;
}
.title {
  @apply text-xl font-[500] text-transparent bg-clip-text bg-gradient-to-r from-purple-500 to-pink-500;
  /* dark: from-purple-400 */
  /* ? A lighter purple in dark mode helps with contrast and readability. Removed temporarily due to a bug in Tailwind */

}
.description {
  @apply prose prose-slate text-base font-normal dark:prose-invert;
}
.animate-explist{
  @apply !opacity-100 !translate-x-0
  /* ? Not sure why the !important symbol is required here */
}

.animated {
  @apply transition-all duration-[800ms] opacity-0 translate-x-full ease-out
}

